# cloud-native-resource-microservice

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: config.py  db.py  mongo_utils.py
app/servicers/: hardware_servicer.py
monitoring/: prometheus.yml
proto/: hardware.proto  resource_service.proto
proto/hardware/v1/: hardware.proto
scripts/: __init__.py  compile_protos.sh  example_client.py
src/: __init__.py  client.py  server.py
src/config/: __init__.py  settings.py
src/repositories/: resource_repository.py
src/services/: __init__.py  resource_service.py
src/utils/: __init__.py  logging.py
