[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-native-microservice"
version = "0.1.0"
description = "gRPC + MongoDB hardware management microservice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "grpcio==1.68.1",
  "grpcio-tools==1.68.1",
  "grpcio-reflection==1.68.1",
  "pymongo==4.16.0",
  "python-dotenv==1.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "gen*"]
